# Path-Tracing-Renderer

./: .gitignore  CMakeLists.txt  README.md  build-release.bat  build-release.sh  build.bat  build.sh  common.hpp  config.hpp  flake.nix  main.cpp  pathtracingrenderer  render.ppm
cpu/: .gitignore  CMakeLists.txt  Makefile  OpenPT  README.md  common.hpp  config.hpp  fedor-render.ppm  main.cpp  pathtracingrenderer  render.ppm  scene.hpp  test-fast.sh  test.sh  vectormath.hpp
cpu/vector-math/: ivec2.hpp  ivec3.hpp  ivec4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
shaders/: compile-custom.bat  main.comp
src/: common.hpp  image.cpp  main.cpp  path-tracing.cpp  rng.cpp  scene.cpp  sky.cpp  trace.cpp
src/include/: common.hpp
vulkan/: CMakeLists.txt  LICENSE  README.md  main.cpp  vulkan_minimal_compute.txt
vulkan/shaders/: compile.bat  main.comp
vulkan/shaders/mandelbrot/: main.comp
